--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="stylesheet" href="https://eclaireursqdb.github.io/styles.css" type="text/css">
 	<title>Eclaireurs de Queue-du-Bois</title>
 </head>
 <body>
