--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="img1">
-		<img src="coin1.png">
+		<img src="coin1.PNG">
 	</div>
 	<div class="imgtitle">
 		<a href="index.html"><center><img src="eclaireursqdb1.png"></center></a>
