--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<a href="informations.html"><h1>Informations</h1></a>
 	</div>
 	<div class="img2">
-		<img src="coin2.png">
+		<img src="coin2.PNG">
 	</div>
 </body>
 </html>
